//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  email String [unique, not null]
  username String [unique, not null]
  password String
  image String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  isActivated Boolean [not null, default: false]
  activationLink String [unique]
  accounts Account [not null]
  transactions Transaction [not null]
  createdEvents Event [not null]
  receivedEvents Event [not null]
  participations Participation [not null]
  userAchievements UserAchievement [not null]
}

Table Token {
  userId Int [pk]
  refreshToken String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
}

Table Account {
  id String [pk]
  userId Int [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  session_state String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table Transaction {
  id Int [pk, increment]
  amount Float [not null]
  type String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userId Int [not null]
  user User [not null]
}

Table Event {
  id Int [pk, increment]
  name String [not null]
  description String
  bankAmount Float [not null, default: 0]
  status String [not null]
  type String [not null]
  imageUrl String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userId Int [not null]
  recipientId Int
  user User [not null]
  recipient User
  participations Participation [not null]
  endConditions EventEndCondition [not null]
}

Table Participation {
  id Int [pk, increment]
  deposit Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userId Int [not null]
  eventId Int [not null]
  event Event [not null]
  user User [not null]
}

Table Achievement {
  id Int [pk, increment]
  name String [not null]
  description String
  iconUrl String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  criteria AchievementCriterion [not null]
  userAchievements UserAchievement [not null]
}

Table AchievementCriterion {
  id Int [pk, increment]
  achievementId Int [not null]
  criteriaType String [not null]
  criteriaValue Int [not null]
  description String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  achievement Achievement [not null]
  userProgress UserCriterionProgress [not null]
}

Table UserAchievement {
  id Int [pk, increment]
  userId Int [not null]
  achievementId Int [not null]
  status String [not null]
  unlockedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  achievement Achievement [not null]
  user User [not null]
  progress UserCriterionProgress [not null]

  indexes {
    (userId, achievementId) [unique]
  }
}

Table UserCriterionProgress {
  id Int [pk, increment]
  userAchievementId Int [not null]
  criterionId Int [not null]
  currentValue Int [not null, default: 0]
  isCompleted Boolean [not null, default: false]
  completedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  criterion AchievementCriterion [not null]
  userAchievement UserAchievement [not null]

  indexes {
    (userAchievementId, criterionId) [unique]
  }
}

Table EventEndCondition {
  id Int [pk, increment]
  eventId Int [not null]
  isCompleted Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  event Event [not null]
  conditions EndCondition [not null]
}

Table EndCondition {
  id Int [pk, increment]
  endConditionId Int [not null]
  parameterName String [not null]
  operator String [not null]
  value String [not null]
  isCompleted Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  eventEndCondition EventEndCondition [not null]
}

Ref: Account.userId > User.id [delete: Cascade]

Ref: Transaction.userId > User.id

Ref: Event.userId > User.id

Ref: Event.recipientId > User.id

Ref: Participation.eventId > Event.id

Ref: Participation.userId > User.id

Ref: AchievementCriterion.achievementId > Achievement.id

Ref: UserAchievement.achievementId > Achievement.id

Ref: UserAchievement.userId > User.id [delete: Cascade]

Ref: UserCriterionProgress.criterionId > AchievementCriterion.id

Ref: UserCriterionProgress.userAchievementId > UserAchievement.id [delete: Cascade]

Ref: EventEndCondition.eventId > Event.id [delete: Cascade]

Ref: EndCondition.endConditionId > EventEndCondition.id [delete: Cascade]